--- a/html/pagina_inicial.html
+++ b/html/pagina_inicial.html
@@ -1,13 +1,22 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Marilia Arquitetura</title>
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600&family=Playfair+Display:wght@600&display=swap" rel="stylesheet">
+  <link
+    href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600&family=Playfair+Display:wght@600&display=swap"
+    rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link
+    href="https://fonts.googleapis.com/css2?family=Alumni+Sans+SC:ital,wght@0,100..900;1,100..900&family=Bebas+Neue&family=Dancing+Script:wght@400..700&family=Great+Vibes&display=swap"
+    rel="stylesheet">
 
   <link rel="stylesheet" href="../css/pagina_inicial.css" />
 </head>
+
 <body>
   <header class="main-header">
     <div class="logo"><a href="#">Marilia Arquitetura</a></div>
@@ -21,21 +30,49 @@
   </header>
 
   <main>
+    <section id="inicio">
+      <span>Espaços que Inspiram</span>
+      <span>Projetos arquitetônicos únicos e funcionais para transformar sua vida.</span>
+    </section>
+
     <section id="projetos">
-      <h2>Espaços que Inspiram</h2>
-      <p>Projetos arquitetônicos únicos e funcionais para transformar sua vida.</p>
-      <img src="papeldeparede.jpg" width="70px" alt="papel de parede">
+      <h2>Projetos</h2>
+      <p>Elegantes e sofisticados</p>
+      <img src="https://images.adsttc.com/media/images/57b4/5bad/e58e/cecb/8100/0001/newsletter/7.jpg?1471437734" alt="casa1" class="casa1">
     </section>
-    
-    <section id="sobre">
-      <h2>Sobre Mim</h2>
-      <p>Com uma visão contemporânea e sensível, trago elegância e funcionalidade em cada detalhe.</p>
+
+    <section id="sobre" class="sobre-section">
+      <div class="sobre-container">
+        <div class="sobre-imagem">
+          <img src="/mama.jpg" alt="Marília Paiva - Arquiteta" class="foto_marilia">
+          <div class="sobre-detalhe"></div>
+        </div>
+        <div class="sobre-conteudo">
+          <h2 class="sobre-titulo">Marilia Paiva</h2>
+          <p class="sobre-texto">
+            Com uma visão contemporânea e sensível, trago elegância e funcionalidade em cada detalhe.
+            Minha abordagem combina estética refinada com soluções práticas, criando espaços que
+            inspiram e melhoram a qualidade de vida.
+          </p>
+          <div class="sobre-dados">
+            <div class="dado-item">
+              <span class="dado-numero">3+</span>
+              <span class="dado-label">Anos de Experiência</span>
+            </div>
+            <div class="dado-item">
+              <span class="dado-numero">15+</span>
+              <span class="dado-label">Projetos Realizados</span>
+            </div>
+          </div>
+        </div>
+      </div>
     </section>
-    
+
     <section id="contato">
       <h2>Fale Comigo</h2>
       <p>Entre em contato para começarmos a construir seu sonho juntos.</p>
     </section>
   </main>
 </body>
+
 </html>
