Melhora na interface

--- a/html/pagina_inicial.html
+++ b/html/pagina_inicial.html
@@ -35,10 +35,19 @@
       <span>Projetos arquitetônicos únicos e funcionais para transformar sua vida.</span>
     </section>
 
+    <section class="serviços">
+      <hr>
+      <h2 class="caixa_dos_serviços">Meus serviços</h2>
+      <h2 class="Meus_serviços">Arquitetura</h2>
+      <h2 class="Meus_serviços">Interiores</h2>
+      <h2 class="Meus_serviços">Acompanhamento</h2>
+    </section>
+
     <section id="projetos">
       <h2>Projetos</h2>
       <p>Elegantes e sofisticados</p>
-      <img src="https://images.adsttc.com/media/images/57b4/5bad/e58e/cecb/8100/0001/newsletter/7.jpg?1471437734" alt="casa1" class="casa1">
+      <img src="https://images.adsttc.com/media/images/57b4/5bad/e58e/cecb/8100/0001/newsletter/7.jpg?1471437734"
+        alt="casa1" class="casa1">
     </section>
 
     <section id="sobre" class="sobre-section">
