--- a/html/pagina_inicial.html
+++ b/html/pagina_inicial.html
@@ -13,7 +13,7 @@
   <link
     href="https://fonts.googleapis.com/css2?family=Alumni+Sans+SC:ital,wght@0,100..900;1,100..900&family=Bebas+Neue&family=Dancing+Script:wght@400..700&family=Great+Vibes&display=swap"
     rel="stylesheet">
-
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
   <link rel="stylesheet" href="../css/pagina_inicial.css" />
 </head>
 
@@ -35,12 +35,38 @@
       <span>Projetos arquitetônicos únicos e funcionais para transformar sua vida.</span>
     </section>
 
-    <section class="serviços">
+    <section class="servicos">
       <hr>
-      <h2 class="caixa_dos_serviços">Meus serviços</h2>
-      <h2 class="Meus_serviços">Arquitetura</h2>
-      <h2 class="Meus_serviços">Interiores</h2>
-      <h2 class="Meus_serviços">Acompanhamento</h2>
+      <h2 class="titulo-servicos">Meus Serviços</h2>
+
+      <div class="container-servicos">
+
+        <div class="card-servico">
+          <div class="icone-servico">
+            <i class="fas fa-building"></i> 
+          </div>
+          <h3 class="titulo-card">Arquitetura</h3>
+          <p class="descricao-servico">Projetos arquitetônicos completos e personalizados para seu espaço.</p>
+        </div>
+
+        <!-- Serviço 2 - Interiores -->
+        <div class="card-servico">
+          <div class="icone-servico">
+            <i class="fas fa-couch"></i> 
+          </div>
+          <h3 class="titulo-card">Interiores</h3>
+          <p class="descricao-servico">Design de interiores que combina funcionalidade e estética.</p>
+        </div>
+
+        <!-- Serviço 3 - Acompanhamento -->
+        <div class="card-servico">
+          <div class="icone-servico">
+            <i class="fas fa-clipboard-check"></i>
+          </div>
+          <h3 class="titulo-card">Acompanhamento</h3>
+          <p class="descricao-servico">Acompanhamento completo durante todo o processo de construção.</p>
+        </div>
+      </div>
     </section>
 
     <section id="projetos">
