--- a/html/pagina_inicial.html
+++ b/html/pagina_inicial.html
@@ -18,7 +18,7 @@
 </head>
 
 <body>
-  <header class="main-header">
+ <header class="main-header">
     <div class="logo"><a href="#">Marilia Arquitetura</a></div>
     <nav class="main-nav">
       <ul>
@@ -31,16 +31,17 @@
 
   <main>
     <section id="inicio">
-      <span>Espaços que Inspiram</span>
-      <span>Projetos arquitetônicos únicos e funcionais para transformar sua vida.</span>
+      <div class="hero-text">
+        <div class="hero-line"><span>ESPAÇOS QUE INSPIRAM</span></div>
+        <div class="hero-line"><span>CRIADOS COM EXCLUSIVIDADE</span></div>
+      </div>
     </section>
 
     <section class="servicos">
       <hr>
-      <h2 class="titulo-servicos">Meus Serviços</h2>
+      <h2 class="titulo-servicos">MEUS SERVIÇOS</h2>
 
       <div class="container-servicos">
-
         <div class="card-servico">
           <div class="icone-servico">
             <i class="fas fa-building"></i> 
@@ -49,7 +50,6 @@
           <p class="descricao-servico">Projetos arquitetônicos completos e personalizados para seu espaço.</p>
         </div>
 
-        <!-- Serviço 2 - Interiores -->
         <div class="card-servico">
           <div class="icone-servico">
             <i class="fas fa-couch"></i> 
@@ -58,7 +58,6 @@
           <p class="descricao-servico">Design de interiores que combina funcionalidade e estética.</p>
         </div>
 
-        <!-- Serviço 3 - Acompanhamento -->
         <div class="card-servico">
           <div class="icone-servico">
             <i class="fas fa-clipboard-check"></i>
@@ -70,7 +69,7 @@
     </section>
 
     <section id="projetos">
-      <h2>Projetos</h2>
+      <h2>PROJETOS</h2>
       <p>Elegantes e sofisticados</p>
       <img src="https://images.adsttc.com/media/images/57b4/5bad/e58e/cecb/8100/0001/newsletter/7.jpg?1471437734"
         alt="casa1" class="casa1">
@@ -83,7 +82,7 @@
           <div class="sobre-detalhe"></div>
         </div>
         <div class="sobre-conteudo">
-          <h2 class="sobre-titulo">Marilia Paiva</h2>
+          <h2 class="sobre-titulo">MARILIA PAIVA</h2>
           <p class="sobre-texto">
             Com uma visão contemporânea e sensível, trago elegância e funcionalidade em cada detalhe.
             Minha abordagem combina estética refinada com soluções práticas, criando espaços que
@@ -104,10 +103,20 @@
     </section>
 
     <section id="contato">
-      <h2>Fale Comigo</h2>
+      <h2>FALE COMIGO</h2>
       <p>Entre em contato para começarmos a construir seu sonho juntos.</p>
     </section>
   </main>
+
+  <script>
+    // Adiciona classe de animação quando a página carrega
+    document.addEventListener('DOMContentLoaded', function() {
+      const heroLines = document.querySelectorAll('.hero-line span');
+      heroLines.forEach((line, index) => {
+        line.style.animationDelay = `${index * 0.2}s`;
+      });
+    });
+  </script>
 </body>
 
 </html>
