--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <link
     href="https://fonts.googleapis.com/css2?family=Alumni+Sans+SC:ital,wght@0,100..900;1,100..900&family=Bebas+Neue&family=Dancing+Script:wght@400..700&family=Great+Vibes&display=swap"
     rel="stylesheet">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-aFwesome/6.0.0-beta3/css/all.min.css">
   <link rel="stylesheet" href="./css/index.css"
 </head>
 
@@ -89,7 +89,7 @@
     <section id="sobre" class="sobre-section">
       <div class="sobre-container">
         <div class="sobre-imagem">
-          <img src="/mama.jpg" alt="Marília Paiva - Arquiteta" class="foto_marilia">
+          <img src="img/mama.jpg" alt="Marília Paiva - Arquiteta" class="foto_marilia">
           <div class="sobre-detalhe"></div>
         </div>
         <div class="sobre-conteudo">
