Mudança das cores

--- a/index.html
+++ b/index.html
@@ -113,10 +113,10 @@
       </div>
     </section>
 
-    <section id="contato">
-      <h2>FALE COMIGO</h2>
+    <footer id="contato">
+      <h2>Marilia Arquitetura</h2>
       <p>Entre em contato para começarmos a construir seu sonho juntos.</p>
-    </section>
+    </footer>
   </main>
 
   <script>
